@@ -371,3 +371,4 @@
  14-May-2025  V1.802 Add support for IHM repository holdings and model file loading
   1-Jul-2025  V1.803 Error handling for splitIdListAndWriteToFiles
  24-Jul-2025  V1.804 Switch to lower-case for CSM ID list generation (for incremental BCIF/image workflow updates)
+ 13-Aug-2025  V1.805 Make use of configured port number in constructing MongoDB URI string
